tests/fail/02_wrong_arg_count.c
int add(int a, int b) {
	return a + b;
}

int main() {
	return add(1);	// ERROR: wrong number of arguments
}
